# oh-my-remote-ai

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.claude/: claude-stop-hooks.json
.claude-plugin/: marketplace.json
.claude-plugin/plugins/remote-claude-code-setup/: README.md  SKILL-INDEX.md  plugin.json
.claude/hooks/: claude-stop-hook.mjs  claude-stop-hook.test.mjs  hook-event-store.mjs
.claude/skills/remote-claude-code-setup-wizard/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
crates/app/: Cargo.toml
crates/app/src/: lib.rs  locale.rs  main.rs  service.rs  setup.rs
crates/application/: Cargo.toml
crates/application/src/: lib.rs
crates/core-model/: Cargo.toml
crates/core-model/src/: lib.rs
crates/core-model/tests/: acceptance.rs
crates/core-service/: Cargo.toml
crates/core-service/src/: lib.rs
crates/core-service/tests/: acceptance.rs
crates/policy/: Cargo.toml
crates/policy/src/: lib.rs
crates/policy/tests/: acceptance.rs
crates/runtime-local/: Cargo.toml
crates/runtime-local/src/: lib.rs
crates/session-store/: Cargo.toml
crates/session-store/src/: lib.rs
crates/transport-slack/: Cargo.toml
crates/transport-slack/src/: formatting.rs  lib.rs  ports.rs  store.rs  (+4 more)
data/: channel-projects.example.json
docs/: architecture.md  hero-export.md  hero-mock-v18.html  launch-copy.ko.md  manual-smoke-test.md  setup.example.json  slack-setup-artifact-patch.example.json  slack-setup-artifact.example.json  slack-setup.md
slack/: app-manifest.json
(+5 files in other folders)
